Fixed alignments

--- a/summary.css
+++ b/summary.css
@@ -47,6 +47,7 @@ body{
     margin: 10px;
     padding: 10px;
     font-size: 20px;
+    text-align: justify;
 }
 
 .profile{
@@ -56,7 +57,7 @@ body{
     padding: 10px;
 }
 .collaborators img{
-    padding:10px 10px;
+    padding:40px;
     width:400px;
     height:400px;
 }
@@ -67,14 +68,24 @@ body{
 }
 
 .collaborators div {
-    width:33%;
+    width:40%;
     border: 2px double tomato;
     margin: 10px;
     padding:10px;
+    text-align: justify;
 }
 
 .list_collaborators h2 {
     text-align: center;
+    font-size: 30px;
+    font: outline;
+    color: tomato;
+}
+
+.collaborators h3{
+    text-align: center;
+    font-size: 30px;
+    color:black;
 }
 
 footer{
